; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_ex_getln.c_get_cmdline_str.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_ex_getln.c_get_cmdline_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cmdline_info = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @get_cmdline_str() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca %struct.cmdline_info*, align 8
  %3 = call %struct.cmdline_info* (...) @get_ccline_ptr()
  store %struct.cmdline_info* %3, %struct.cmdline_info** %2, align 8
  %4 = load %struct.cmdline_info*, %struct.cmdline_info** %2, align 8
  %5 = icmp eq %struct.cmdline_info* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %0
  store i32* null, i32** %1, align 8
  br label %15

7:                                                ; preds = %0
  %8 = load %struct.cmdline_info*, %struct.cmdline_info** %2, align 8
  %9 = getelementptr inbounds %struct.cmdline_info, %struct.cmdline_info* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.cmdline_info*, %struct.cmdline_info** %2, align 8
  %12 = getelementptr inbounds %struct.cmdline_info, %struct.cmdline_info* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32* @vim_strnsave(i32 %10, i32 %13)
  store i32* %14, i32** %1, align 8
  br label %15

15:                                               ; preds = %7, %6
  %16 = load i32*, i32** %1, align 8
  ret i32* %16
}

declare dso_local %struct.cmdline_info* @get_ccline_ptr(...) #1

declare dso_local i32* @vim_strnsave(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
